--- a/app.yaml
+++ b/app.yaml
@@ -7,6 +7,8 @@ threadsafe: true
 handlers:
 - url: /images
   static_dir: images
+- url: favicon.ico
+  static_files: images/favicon.ico
 - url: /
   script: helloworld.application
 
