--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,7 @@ handlers:
   static_dir: images
 - url: /favicon.ico
   static_files: images/favicon.ico
+  upload: images/favicon.ico
 - url: /
   script: helloworld.application
 
